<?xml version="1.0" encoding="utf-8"?>


<android.support.v7.widget.CardView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        app:cardElevation="5dp"
        app:cardCornerRadius="5dp"
        android:layout_width="match_parent"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginStart="15dp"
        android:clickable="true"
        android:background="@color/colorPrimaryDark"
        android:layout_height="wrap_content">


    <RelativeLayout android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
        <ImageView
                android:id="@+id/iv_movie_poster"
                android:layout_width="match_parent"
                android:layout_gravity="center_horizontal"
                android:background="@color/colorPrimaryDark"
                android:transitionName="robot"
                android:layout_height="400dp"/>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                android:padding="2dp"
                android:layout_marginTop="300dp"
                android:orientation="vertical"
        >

            <LinearLayout

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/colorPrimaryDark"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">
                <TextView
                        android:layout_width="0dp"
                        android:layout_weight="3"
                        android:layout_height="wrap_content"
                        android:padding="10dp"
                        android:textColor="@color/white"
                        android:textSize="12sp"
                        android:text="@string/vote_count"/>
                <TextView
                        android:id="@+id/vote_count_value"
                        android:layout_width="0dp"
                        android:layout_weight="7"
                        android:layout_height="wrap_content"
                        android:padding="10dp"
                        android:textStyle="bold"
                        android:textColor="@color/colorPrimary"

                        android:textSize="16sp"
                        android:text="10"/>

                <ImageView
                        android:id="@+id/iv_fav"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="10dp"
                        android:layout_margin="1dp"
                        android:src="@drawable/ic_unselected_favorite_border"/>

            </LinearLayout>
            <LinearLayout android:layout_width="match_parent"
                          android:layout_height="wrap_content"
                          android:orientation="horizontal">
                <TextView
                        android:layout_width="0dp"
                        android:layout_weight="3"
                        android:layout_height="wrap_content"
                        android:padding="10dp"
                        android:textSize="12sp"
                        android:textColor="@color/colorPrimaryDark"
                        android:text="@string/popularity"/>
                <TextView
                        android:id="@+id/popularity_value"
                        android:layout_width="0dp"
                        android:layout_weight="8"
                        android:layout_height="wrap_content"
                        android:padding="10dp"
                        android:textStyle="bold"

                        android:textSize="14sp"
                        android:text="100"/>
            </LinearLayout>
            <LinearLayout android:layout_width="match_parent"
                          android:layout_height="wrap_content"
                          android:background="@color/colorPrimaryDark"

                          android:orientation="horizontal">
                <TextView
                        android:layout_width="0dp"
                        android:layout_weight="3"
                        android:layout_height="wrap_content"
                        android:padding="10dp"
                        android:textColor="@color/white"
                        android:textSize="12sp"
                        android:text="@string/movie_title"/>
                <TextView
                        android:id="@+id/movie_title_value"
                        android:layout_width="0dp"
                        android:layout_weight="8"
                        android:layout_height="wrap_content"
                        android:padding="10dp"
                        android:textStyle="bold"
                        android:textColor="@color/colorPrimary"

                        android:text="Avengers"/>
            </LinearLayout>
            <LinearLayout android:layout_width="match_parent"
                          android:layout_height="wrap_content"

                          android:orientation="horizontal">
                <TextView
                        android:layout_width="0dp"
                        android:layout_weight="3"

                        android:layout_height="wrap_content"
                        android:padding="10dp"
                        android:textSize="12sp"
                        android:textColor="@color/colorPrimaryDark"
                        android:text="@string/release_date"/>
                <TextView
                        android:id="@+id/release_date_value"
                        android:layout_width="0dp"
                        android:layout_weight="8"
                        android:layout_height="match_parent"
                        android:padding="10dp"
                        android:textStyle="bold"

                        android:textColor="@color/colorPrimaryDark"
                        android:text="10"/>
            </LinearLayout>
        </LinearLayout>

    </RelativeLayout>
</android.support.v7.widget.CardView>


