<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
>

    <data>

        <variable
                name="movieDetails"
                type="com.siddhesh.errosmovies.ui.model.MovieDetails"/>
    </data>
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">


        <android.support.v7.widget.CardView
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:theme="@style/AppTheme.AppBarOverlay">

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:background="@color/colorPrimaryDark"
                    android:orientation="horizontal">
                <ImageView
                        android:id="@+id/iv_back"
                        android:layout_width="56dp"
                        android:padding="15dp"
                        android:src="@drawable/ic_arrow_left_black"
                        android:layout_height="56dp"/>
                <TextView
                        android:id="@+id/title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="start"
                        android:minHeight="?actionBarSize"
                        android:padding="@dimen/appbar_padding"
                        android:textColor="@color/colorPrimary"
                        android:text="@string/app_name"
                        android:textAppearance="@style/TextAppearance.Widget.AppCompat.Toolbar.Title"/>
            </LinearLayout>

        </android.support.v7.widget.CardView>
        <View android:layout_width="match_parent"
              android:background="@color/colorPrimary" android:layout_height="1dp"/>

        <ScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                <LinearLayout android:layout_width="match_parent"
                              android:layout_height="wrap_content"
                              android:orientation="vertical"
                >

                    <ImageView
                            android:id="@+id/iv_movie_poster"
                            android:layout_width="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:background="@color/colorPrimary"
                            android:scaleType="fitXY"
                            android:transitionName="robot"
                            android:adjustViewBounds="true"
                            android:minHeight="400dp"
                            android:layout_height="400dp"/>

                    <TextView
                            android:id="@+id/tv_title"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="10dp"
                            android:textColor="@color/colorPrimary"
                            android:textSize="16sp"
                            android:gravity="center"
                            android:textStyle="bold"
                            android:text="@{movieDetails.title}"

                            android:layout_margin="5dp"
                            android:layout_alignParentBottom="true"
                            android:background="@color/colorPrimaryDark"/>
                </LinearLayout>

                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/colorPrimary"
                        android:padding="15dp"
                        android:orientation="vertical">

                    <TextView
                            android:text="@string/overview"
                            android:layout_width="wrap_content"
                            android:textColor="@color/colorPrimaryDark"
                            android:layout_marginBottom="15dp"
                            android:textStyle="bold"
                            android:textSize="14sp"
                            android:layout_height="wrap_content"/>
                    <TextView
                            android:id="@+id/tv_overview"
                            android:layout_width="wrap_content"
                            android:textColor="@color/colorPrimaryDark"
                            android:textSize="14sp"
                            android:text="@{movieDetails.overview}"

                            android:layout_height="wrap_content"/>

                </LinearLayout>
                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/colorPrimaryDark"
                        android:padding="15dp"
                        android:orientation="vertical">

                    <TextView
                            android:id="@+id/tv_tags"
                            android:layout_width="wrap_content"
                            android:textColor="@color/colorPrimary"
                            android:textSize="14sp"
                            android:text="@{movieDetails.releaseDate}"
                            android:layout_height="wrap_content"/>

                </LinearLayout>

                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/colorPrimary"
                        android:padding="15dp"
                        android:orientation="vertical">

                    <TextView
                            android:text="@string/production_companies"
                            android:layout_width="wrap_content"
                            android:textColor="@color/colorPrimaryDark"
                            android:layout_marginBottom="15dp"
                            android:textStyle="bold"
                            android:textSize="14sp"
                            android:layout_height="wrap_content"/>
                    <TextView
                            android:id="@+id/tv_production_company"
                            android:layout_width="wrap_content"
                            android:textColor="@color/colorPrimaryDark"
                            android:textSize="14sp"
                            android:text="@{movieDetails.tagline}"
                            android:layout_height="wrap_content"/>

                </LinearLayout>

                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/colorPrimaryDark"
                        android:padding="15dp"
                        android:orientation="vertical">

                    <TextView
                            android:text="@string/production_countries"
                            android:layout_width="wrap_content"
                            android:textColor="@color/colorPrimary"
                            android:layout_marginBottom="15dp"
                            android:textStyle="bold"
                            android:textSize="14sp"
                            android:layout_height="wrap_content"/>
                    <TextView
                            android:id="@+id/tv_production_country"
                            android:layout_width="wrap_content"
                            android:textColor="@color/colorPrimary"
                            android:textSize="14sp"
                            android:text="@{movieDetails.status}"

                            android:layout_height="wrap_content"/>

                </LinearLayout>
                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/colorPrimary"
                        android:padding="15dp"
                        android:orientation="vertical">

                    <TextView
                            android:text="@string/spoken_languages"
                            android:layout_width="wrap_content"
                            android:textColor="@color/colorPrimaryDark"
                            android:layout_marginBottom="15dp"
                            android:textStyle="bold"
                            android:textSize="14sp"
                            android:layout_height="wrap_content"/>
                    <TextView
                            android:id="@+id/tv_SpokenLanguages"
                            android:layout_width="wrap_content"
                            android:textColor="@color/colorPrimaryDark"
                            android:textSize="14sp"
                            android:text="@{movieDetails.originalTitle}"

                            android:layout_height="wrap_content"/>

                </LinearLayout>
                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/colorPrimaryDark"
                        android:padding="15dp"
                        android:orientation="vertical">

                    <TextView
                            android:text="@string/movie_duration"
                            android:layout_width="wrap_content"
                            android:textColor="@color/colorPrimary"
                            android:layout_marginBottom="15dp"
                            android:textStyle="bold"
                            android:textSize="14sp"
                            android:layout_height="wrap_content"/>
                    <TextView
                            android:id="@+id/tv_duration"
                            android:layout_width="wrap_content"
                            android:textColor="@color/colorPrimary"
                            android:textSize="14sp"
                            android:textStyle="bold"
                            android:text="@{movieDetails.originalLanguage}"

                            android:layout_height="wrap_content"/>

                </LinearLayout>


            </LinearLayout>

        </ScrollView>


    </LinearLayout>

</layout>
